# LegalLens-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  test_pipeline.py
backend/app/: db.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  models.py
backend/app/evaluation/: runner.py  tracker.py
backend/app/pipeline/: graph.py  mock.py  nodes.py  prompts.py
backend/app/rag/: ingest.py  vector_store.py
backend/data/clause_database/: risky_clauses.json  standard_clauses.json
backend/data/evaluation/: ground_truth.json
backend/data/sample_contracts/: test_agreement.docx
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisHistory.jsx  AnalysisResults.jsx  ClauseCard.jsx  ClauseFilter.jsx  DocumentUpload.jsx  DocumentView.jsx  PipelineProgress.jsx  RiskSummary.jsx
frontend/src/utils/: api.js
scripts/: deploy-manual.sh  gcp-setup.sh
